[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codecrafters-redis"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["unit-tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
